sumo/tests/traci/ChangeRoute/InvalidNodeId/options.traci
sumo.exe --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8819 --netstate-dump netstate_dump.xml TraCITestClient.exe -def changeroute_invalidnode.prog -p 8819 -h localhost -o testclient_out.txt